--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,7 @@ export DEB_LDFLAGS_MAINT_APPEND=-Wl,--as-needed -Wl,-O1
 export DEB_BUILD_MAINT_OPTIONS=hardening=+all
 
 override_dh_auto_configure:
-	dh_auto_configure -- --disable-silent-rules --enable-kill-on-sigterm
+	dh_auto_configure -- --disable-silent-rules --enable-kill-on-sigterm --enable-maintainer-mode
 
 override_dh_install:
 	dh_install debian/60-lightdm-gtk-greeter.conf usr/share/lightdm/lightdm.conf.d/
