--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,7 @@
-Source: lightdm-gtk-greeter
+Source: gecosws-lightdm-greeter
 Section: x11
 Priority: optional
-Maintainer: Xubuntu Developers <xubuntu-devel@lists.ubuntu.com>
-XSBC-Original-Maintainer: Debian Xfce Maintainers <debian-xfce@lists.debian.org>
-Uploaders: Yves-Alexis Perez <corsac@debian.org>,
-           Emanuele Rocca <ema@debian.org>,
-           Simon Huggins <huggie@earth.li>
+Maintainer: Alfonso de Cala <alfonso.cala@juntadeandalucia.es>
 Build-Depends: debhelper (>= 9.20160115),
                exo-utils,
                intltool,
@@ -14,11 +10,11 @@ Build-Depends: debhelper (>= 9.20160115),
                liblightdm-gobject-1-dev (>= 1.3.5),
                pkg-config
 Standards-Version: 4.1.2
-Homepage: https://launchpad.net/lightdm-gtk-greeter
-Vcs-Git: https://salsa.debian.org/xfce-team/goodies/lightdm-gtk-greeter.git
-Vcs-Browser: https://salsa.debian.org/xfce-team/goodies/lightdm-gtk-greeter
+Homepage: https://github.com/gecos-team/gecosws-lightdm-greeter
+Vcs-Git: https://github.com/gecos-team/gecosws-lightdm-greeter.git
+Vcs-Browser: https://github.com/gecos-team/gecosws-lightdm-greeter.git
 
-Package: lightdm-gtk-greeter
+Package: gecosws-lightdm-greeter
 Provides: lightdm-greeter
 Replaces: budgie-lightdm-theme (<< 0.7.2), lightdm (<< 0.9.2-1), lightdm-gtk
 Breaks: budgie-lightdm-theme (<< 0.7.2), lightdm (<< 0.9.2-1), lightdm-gtk
