--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 9.20160115),
                intltool,
                libgtk-3-dev,
                libindicator3-dev,
-               liblightdm-gobject-1-dev (>= 1.3.5),
+               liblightdm-gobject-1-dev (>= 1.3.5) | liblightdm-gobject-dev (>= 1.3.5),
                pkg-config
 Standards-Version: 4.1.2
 Homepage: https://github.com/gecos-team/gecosws-lightdm-greeter
