--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,15 @@
-Source: lightdm-gtk-greeter
+Source: gecosws-lightdm-greeter
 Section: x11
 Priority: optional
 Maintainer: Alfonso de Cala <alfonso.cala@juntadeandalucia.es>
-Build-Depends: debhelper (>= 9), pkg-config, libgtk-3-dev, 
-  liblightdm-gobject-1-dev (>= 1.3.5), intltool, autotools-dev,
-  libido3-0.1-dev, libindicator3-dev
+Build-Depends: debhelper (>= 9),
+               autotools-dev,
+               libido3-0.1-dev,
+               intltool,
+               libgtk-3-dev,
+               libindicator3-dev,
+               liblightdm-gobject-1-dev (>= 1.3.5) | liblightdm-gobject-dev (>= 1.3.5),
+               pkg-config
 Standards-Version: 3.9.6
 Homepage: https://github.com/gecos-team/gecosws-lightdm-greeter
 Vcs-Git: https://github.com/gecos-team/gecosws-lightdm-greeter.git
