--- a/config.h.in
+++ b/config.h.in
@@ -54,8 +54,7 @@
 /* Kill greeter in SIGTERM handler, see LP1445461 */
 #undef KILL_ON_SIGTERM
 
-/* Define to the sub-directory in which libtool stores uninstalled libraries.
-   */
+/* Define to the sub-directory where libtool stores uninstalled libraries. */
 #undef LT_OBJDIR
 
 /* Name of package */
